Update CelesteScanBot.java